--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^8.57.1",
     "eslint-config-next": "15.0.3",
     "eslint-plugin-tailwindcss": "^3.17.5",
+    "husky": "^9.1.6",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
