--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "prepare": "husky",
     "lint": "next lint",
     "lint:fix": "next lint --fix"
   },
