feat(translator): make feature translator and can swap

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ NEXT_PUBLIC_APP_ENV=
 
 # AppSecrets Configuration
 NEXT_PUBLIC_APP_SECRET=
+
+# Translations Configuration
+TRANSLATIONS_LANGUAGES_API_BASE_URL=
+TRANSLATIONS_TEXT_API_BASE_URL=
